--- a/mybodypartner/pom.xml
+++ b/mybodypartner/pom.xml
@@ -51,6 +51,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+
+    	<finalName>mybodypartner</finalName>
 	</build>
 
 </project>
