--- a/mbp-rest-service/pom.xml
+++ b/mbp-rest-service/pom.xml
@@ -14,6 +14,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mbp-rest-service</name>
 	<description>MyBodyPartner RESTful Web Service</description>
+	<packaging>war</packaging>
+
 
 	<properties>
 		<java.version>11</java.version>
@@ -32,7 +34,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -51,6 +57,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>mbpRestApi</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
