--- a/mbp-rest-service/pom.xml
+++ b/mbp-rest-service/pom.xml
@@ -49,6 +49,11 @@
 			<version>2.3.6</version>
 		</dependency>
 		<dependency>
+    		<groupId>javax.mail</groupId>
+    		<artifactId>mail</artifactId>
+    		<version>1.5.0-b01</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
