updated travis yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ language: java
 addons:
   sonarcloud:
     organization: "projetpai-owner" # the key of the org you chose at step #3
+    
+install: true
 
 script:
-- mvn clean verify sonar:sonar -Dsonar.projectKey=mybodypartner-rest
+- mvn sonar:sonar -Dsonar.projectKey=mybodypartner-rest
