refresh token implemented

--- a/mbp-webapp/angular.json
+++ b/mbp-webapp/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "mbp-webapp": {
@@ -146,6 +146,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "mbp-webapp"
+    }
+  },
+  "defaultProject": "mbp-webapp",
+  "cli": {
+    "analytics": false
+  }
 }
