--- a/mbp-rest-service/pom.xml
+++ b/mbp-rest-service/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>fr.univ.lille.fil</groupId>
 	<artifactId>mbp-rest-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>mbp-rest-service</name>
 	<description>MyBodyPartner RESTful Web Service</description>
 	<packaging>war</packaging>
