--- a/mbp-webapp/package.json
+++ b/mbp-webapp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "^6.0.1",
     "@types/jquery": "^3.3.33",
     "bootstrap": "^4.4.1",
