--- a/mbp-webapp/package.json
+++ b/mbp-webapp/package.json
@@ -26,6 +26,7 @@
     "@types/jquery": "^3.3.33",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.4",
     "ts-md5": "^1.2.7",
     "tslib": "^1.10.0",
